--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "xQc Status Indicator",
-  "description": "Checks whether Félix is live",
-  "version": "2.2",
+  "description": "Provides real-time information about the broadcast.",
+  "version": "2.3",
   "action": {
     "default_title": "xQc Status Indicator",
     "default_icon": {
