--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "xQc Status Indicator",
-  "description": "Provides real-time information about the broadcast.",
-  "version": "2.6",
+  "description": "Get real-time updates on xQc’s live streams on Twitch and Kick",
+  "version": "2.6.1",
   "action": {
     "default_title": "xQc Status Indicator",
     "default_icon": {
