--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "xQc Status Indicator",
   "description": "Get real-time updates on xQc’s live streams on Twitch and Kick",
-  "version": "2.7.0",
+  "version": "2.7.5",
   "action": {
     "default_title": "xQc Status Indicator",
     "default_icon": {
@@ -15,7 +15,8 @@
   "background": {
     "service_worker": "background.js"
   },
-  "permissions": [ "alarms", "contextMenus" ],
+  "permissions": [ "alarms", "contextMenus", "notifications", "storage" ],
+  "options_page": "options.html",
   "icons": {
     "16": "images/monkey-16.png",
     "32": "images/monkey-32.png",
